update dependencies, remove jCenter, solve warnings

--- a/app/src/main/res/layout/fragment_geocoding.xml
+++ b/app/src/main/res/layout/fragment_geocoding.xml
@@ -14,7 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_bird_240dp"
-        android:tint="?attr/colorOnBackground"
+        app:tint="?attr/colorOnBackground"
         android:layout_marginTop="32dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
