--- a/app/src/main/res/layout/widget_destination_pointer.xml
+++ b/app/src/main/res/layout/widget_destination_pointer.xml
@@ -30,7 +30,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:src="@drawable/ic_compass_needle_black_280dp"
-        android:tint="?attr/colorOnBackground"
+        app:tint="?attr/colorOnBackground"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/destinationTextView"
