--- a/app/src/main/res/layout/widget_location_state.xml
+++ b/app/src/main/res/layout/widget_location_state.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:parentTag="android.widget.LinearLayout"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -12,7 +13,7 @@
         android:id="@+id/locationStateImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:tint="?attr/colorOnBackground"
+        app:tint="?attr/colorOnBackground"
         android:src="@drawable/ic_location_disabled_black_240dp"/>
 
     <TextView
