--- a/app/src/main/res/drawable/ic_launcher_background.xml
+++ b/app/src/main/res/drawable/ic_launcher_background.xml
@@ -3,36 +3,13 @@
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
-  <group android:scaleX="1.2"
-      android:scaleY="1.2"
-      android:translateX="-10.8"
-      android:translateY="-10.8">
-    <group android:scaleX="0.8"
-        android:scaleY="0.8"
-        android:translateX="10.8"
-        android:translateY="10.8">
-      <group android:scaleX="0.8"
-          android:scaleY="0.8"
-          android:translateX="10.8"
-          android:translateY="10.8">
-          <path
-              android:pathData="M0,0h108v108h-108z"
-              android:fillColor="#8DBD33"/>
-        <path
-            android:pathData="M5.53,59.267 L98.537,59.073 78.331,76.889 71.655,101.158Z"
-            android:strokeLineJoin="round"
-            android:strokeWidth="20"
-            android:fillColor="#ffffff"
-            android:strokeColor="#00000000"
-            android:strokeLineCap="round"/>
-        <path
-            android:pathData="M5.53,59.267 L71.655,101.158 78.331,76.889 98.537,59.073 74.135,75.931 68.314,93.532Z"
-            android:strokeLineJoin="miter"
-            android:strokeWidth="10"
-            android:fillColor="#dadada"
-            android:strokeColor="#00000000"
-            android:strokeLineCap="butt"/>
-      </group>
-    </group>
-  </group>
+  <path
+      android:pathData="M0,0h108v108h-108z"
+      android:fillColor="#8dbd33"/>
+  <path
+      android:pathData="m17.17,60.6 l73.65,-0.15 -16,14.11 -5.29,19.22z"
+      android:fillColor="#fff"/>
+  <path
+      android:pathData="m17.17,60.6 l52.36,33.17 5.29,-19.22 16,-14.11 -19.32,13.35 -4.61,13.94z"
+      android:fillColor="#dadada"/>
 </vector>
